# distillate-xp-glyco-dfm-v3

./: .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PROMPT.md  README.md  demo_train.py  pyproject.toml  run_training.sh  train.py
.claude/: settings.json  settings.local.json
.distillate/: AGENT_INSTRUCTIONS.txt  PROMPT.md  REPORTING.md  alerts.json  budget.json  context.md  events.jsonl  experiment.json  hf_jobs.json  last_session_id  optimization_steering.md  project.json  runs.jsonl  steering.md
checkpoints/: best_model.pt  latest_model.pt
models/: pareto_frontier.json
